fixed dependencies and changes caused by dependencies

--- a/Notebooks/Lab/step-2-exp-1-motion-prediction/s4-eval_agent_motion_prediction.ipynb
+++ b/Notebooks/Lab/step-2-exp-1-motion-prediction/s4-eval_agent_motion_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "63d6eb40",
+   "id": "cc0566ec",
    "metadata": {
     "tags": []
    },
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e3106da",
+   "id": "8b98c966",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efc8aebc",
+   "id": "e485e4cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dec7011",
+   "id": "2fbf6b6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "798167be",
+   "id": "cb96456e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3e78ca4",
+   "id": "0971cec5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d8dfa1",
+   "id": "199a072e",
    "metadata": {},
    "source": [
     "# Pull data"
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f55d643",
+   "id": "9e256f59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78e08ab7",
+   "id": "4c514ad7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9969d62",
+   "id": "8b923e22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81bc6a43",
+   "id": "5459b41b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0edcccaa",
+   "id": "57777d13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08c1beb8",
+   "id": "46bd6544",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c18f673",
+   "id": "ab26f67c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e43635bb",
+   "id": "5bce68de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35460317",
+   "id": "3e409f85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83375694",
+   "id": "edb96255",
    "metadata": {
     "id": "maau9CVBJCbi"
    },
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63e722cb",
+   "id": "e71b9947",
    "metadata": {
     "id": "fF8BxQLQJCbi"
    },
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "260e40c8",
+   "id": "6fdd8b30",
    "metadata": {
     "id": "07W1O8eZJCbi"
    },
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a5cf703",
+   "id": "ba62392f",
    "metadata": {
     "id": "cU1qt5GVJCbj"
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26005934",
+   "id": "610ea1ba",
    "metadata": {
     "id": "509YuZenJCbj"
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "134a7215",
+   "id": "031ce669",
    "metadata": {
     "id": "1cyqL6i1JCbj"
    },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e470dcbf",
+   "id": "7d5a9947",
    "metadata": {
     "id": "YX-loQElJCbj"
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f11ae855",
+   "id": "5087c503",
    "metadata": {
     "id": "nEw-PI7tJCbk"
    },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fbcb9c2",
+   "id": "91d54f77",
    "metadata": {},
    "source": [
     "# Run Evaluation"
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "468720ff",
+   "id": "52ca2bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb425b2",
+   "id": "5eede3a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03aa95d3",
+   "id": "f4d5e298",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27928a60",
+   "id": "5c98f31e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddf82d77",
+   "id": "56960634",
    "metadata": {},
    "source": [
     "We use the `wandb` Public API to easily grab all the runs from our training project (with any optional filters) and use them as candidate models for the evaluation flow."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d16d8715",
+   "id": "1f07734b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
     "run_model_map = {}\n",
     "for model_run in model_runs:\n",
     "    for model_art in model_run.logged_artifacts():\n",
-    "        if \"latest\" in model_art.aliases:\n",
+    "        if \"latest\" in model_art.aliases and \"checkpoint\" in model_art.name:\n",
     "            run_model_map[model_run.name] = {\n",
     "                \"loss\": model_run.summary[\"loss\"],\n",
     "                \"avg_loss\": model_run.summary[\"avg_loss\"],\n",
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8c266b7",
+   "id": "f1452d97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ba14ad3",
+   "id": "c5a8571c",
    "metadata": {},
    "source": [
     "Note: during our evaluation flow we are not creating a new run per each evaluation. Instead, to be able to keep the context of the training of the model with the evaluation, we simply update the summary metadata of the candidate model runs with the additional evaluation metrics, keeping things unified and streamlined"
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7c3c763",
+   "id": "f116eb66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d74ace2a",
+   "id": "75aa64c6",
    "metadata": {},
    "source": [
     "### Log Table containing all details of Eval run"
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fa5fe85",
+   "id": "7eee1912",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45365045",
+   "id": "75144a65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9cb0b66",
+   "id": "86b287c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6573ca4c",
+   "id": "f29e287e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,12 +710,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4028556d",
+   "id": "76fa39aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "run.finish()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f03bf75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
