--- a/Notebooks/Lab/step-2-exp-1-motion-prediction/s3-train-agent_motion_prediction.ipynb
+++ b/Notebooks/Lab/step-2-exp-1-motion-prediction/s3-train-agent_motion_prediction.ipynb
@@ -358,7 +358,8 @@
    "outputs": [],
    "source": [
     "import ray.train as train\n",
-    "from ray.air import session, Checkpoint"
+    "from ray.air import session, Checkpoint\n",
+    "from ray.train.torch import TorchTrainer"
    ]
   },
   {
@@ -474,7 +475,6 @@
    },
    "outputs": [],
    "source": [
-    "from ray.train.torch import TorchTrainer\n",
     "from ray.air.config import RunConfig, ScalingConfig\n",
     "from ray.air.callbacks.wandb import WandbLoggerCallback #🪄🐝"
    ]
@@ -571,7 +571,7 @@
     "tuner_train_config[\"dataset_key\"] = cfg[\"train_data_loader\"][\"key\"]\n",
     "\n",
     "##tunable\n",
-    "tuner_train_config[\"max_num_steps\"] = tune.quniform(100, 500, 25)\n",
+    "tuner_train_config[\"max_num_steps\"] = tune.quniform(100, 200, 25)\n",
     "tuner_train_config[\"lr\"] = tune.loguniform(1e-4, 1e-2)\n",
     "tuner_train_config[\"batch_size\"] = tune.quniform(6, 24, 6)\n",
     "cfg[\"raster_params\"][\"map_type\"] = tune.choice([\"py_semantic\", \"py_satellite\"])\n",
@@ -605,7 +605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_search_attempts = 25"
+    "n_search_attempts = 3"
    ]
   },
   {
