--- a/Notebooks/Lab/step-2-exp-1-motion-prediction/s5-promote-agent_motion_prediction.ipynb
+++ b/Notebooks/Lab/step-2-exp-1-motion-prediction/s5-promote-agent_motion_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "78a06af9",
+   "id": "232f13e3",
    "metadata": {},
    "source": [
     "# Setup"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1ab3c31",
+   "id": "0dfdc377",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3495bce1",
+   "id": "67595827",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c306557",
+   "id": "db69f378",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a75ab3e",
+   "id": "357d2cd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a4b61f8",
+   "id": "2c3101f3",
    "metadata": {},
    "source": [
     "# Promote Model to Registry"
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d0e493f",
+   "id": "0f2205a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5759b36",
+   "id": "413afa0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "405c718c",
+   "id": "ec4bdbe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "540e47b8",
+   "id": "c03326f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb791ca",
+   "id": "072049a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44e73120",
+   "id": "e29b34ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50efa5ef",
+   "id": "4028c18f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,17 +153,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "861af2a3",
+   "id": "cca1bfdd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection_name = \"prediction-model\""
+    "collection_name = \"av-prediction\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80325e99",
+   "id": "2029cd5e",
    "metadata": {},
    "outputs": [],
    "source": [
